fixed spacing issue

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -207,6 +207,7 @@ section {
 .member-function {
   margin-top: 0;
   margin-bottom: 3em;
+  display: none;
 }
 
 .team-fotos {
