--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -273,6 +273,7 @@
   .member-function {
     margin-top: 0;
     margin-block-start: 0;
+    display: block;
   }
 
   .actievraag {
